created tex version without figures

--- a/06_Paper/ER-ED/Manuscript_ERED_Stage1_rev.Rmd
+++ b/06_Paper/ER-ED/Manuscript_ERED_Stage1_rev.Rmd
@@ -193,6 +193,10 @@ Subjective arousal and effort ratings are assessed after each block using a slid
 
 INSERT DESIGN TABLE HERE
 
+\includepdf[pages={-}, landscape=true]{Supplement/Design_Table_T2.pdf}
+
+\newpage
+
 <!--
 \newpage
 
