--- a/06_Paper/ER-ED/method_rev.Rmd
+++ b/06_Paper/ER-ED/method_rev.Rmd
@@ -88,7 +88,7 @@ For more detailed information on psychometric properties of the questionnaires, 
 
 The ER paradigm will consist of three parts that will be described in the following.
 
-*Part one: ER task.* <br> Part one will be a standard ER task in a block design (see Figure \@ref(fig:DesignERED)), similar to paradigms previously used by our group[@Scheffel2021].
+*Part one: ER task.* <br> Part one will be a standard ER task in a block design (see Figure 2), similar to paradigms previously used by our group[@Scheffel2021].
 Participants will be told to actively view neutral and negative pictures (see [2.3.3](##stimuli)) or to regulate all upcoming emotions by means of distraction, distancing, and expressive suppression, respectively.
 Every participant first will have the condition "active viewing-neutral" that serves as a baseline condition.
 During this block, 20 neutral pictures will be presented.
