knitted new revision file with design table

--- a/06_Paper/ER-ED/Manuscript_ERED_Stage1.tex
+++ b/06_Paper/ER-ED/Manuscript_ERED_Stage1.tex
@@ -332,7 +332,7 @@ Then no SV will be 1, but still, the SVs of all strategies can be interpreted as
 In a separate study, we will test our adapted paradigm together with a \emph{n}-back task and explore whether this paradigm can describe individuals that do not prefer the easiest \emph{n}-back option (see Zerna et al.\textsuperscript{34}).
 
 \begin{figure}
-\includegraphics[width=\textwidth]{C:/Users/scheffel/Scheffel/Forschung/A_Projects/2021_CERED/CAD/06_Paper/ER-ED/figures/Paradigm_Scheme_T2} \caption{Exemplary visualization of two response patterns. In the top half, the person has a clear preference for one of the three strategies. In the lower half, they have no clear preference and therefore show an inconsistent response pattern. This pattern can be represented by our paradigm.}\label{fig:ResponsePatterns}
+\includegraphics[width=\textwidth]{figures/Paradigm_Scheme_T2} \caption{Exemplary visualization of two response patterns. In the top half, the person has a clear preference for one of the three strategies. In the lower half, they have no clear preference and therefore show an inconsistent response pattern. This pattern can be represented by our paradigm.}\label{fig:ResponsePatterns}
 \end{figure}
 
 The aim of the present study is to evaluate whether this paradigm is suitable for determining SVs of ER strategies.
@@ -452,7 +452,7 @@ However, participants will be asked to state the reasons for the decision afterw
 As soon as they have decided, they will see the respective instruction and the block with another 20 negative pictures starts.
 
 \begin{figure}
-\includegraphics[width=\textwidth]{C:/Users/scheffel/Scheffel/Forschung/A_Projects/2021_CERED/CAD/06_Paper/ER-ED/figures/Design_ER-ED} \caption{Block design of the paradigm. Every participant starts with two "active viewing" blocks continaing neutral (Block 1) and negative (Block 2) pictures. Order of the regulation blocks (Blocks 3, 4, and 5) is randomized between participants. After, the discounting procedure takes place. All three regulation strategies are pairwise compared. Before the last block, participants can decide which regulation strategy they want to reapply. Subjective arousal and effort ratings are assessed after each block using a slider on screen with a continuous scale.}\label{fig:DesignERED}
+\includegraphics[width=\textwidth]{figures/Design_ER-ED} \caption{Block design of the paradigm. Every participant starts with two "active viewing" blocks continaing neutral (Block 1) and negative (Block 2) pictures. Order of the regulation blocks (Blocks 3, 4, and 5) is randomized between participants. After, the discounting procedure takes place. All three regulation strategies are pairwise compared. Before the last block, participants can decide which regulation strategy they want to reapply. Subjective arousal and effort ratings are assessed after each block using a slider on screen with a continuous scale.}\label{fig:DesignERED}
 \end{figure}
 
 \hypertarget{stimuli}{%
@@ -881,7 +881,7 @@ The authors declare no competing interests.
 \newpage
 
 \begin{figure}
-\includegraphics[width=\textwidth]{C:/Users/scheffel/Scheffel/Forschung/A_Projects/2021_CERED/CAD/06_Paper/ER-ED/figures/Paradigm_Scheme_T2} \caption{ }\label{fig:ResponsePatternsAppendix}
+\includegraphics[width=\textwidth]{figures/Paradigm_Scheme_T2} \caption{ }\label{fig:ResponsePatternsAppendix}
 \end{figure}
 
 \emph{Figure 1.} Exemplary visualization of two response patterns.
@@ -890,7 +890,7 @@ In the lower half, they have no clear preference and therefore show an inconsist
 This pattern can also be represented by our paradigm.
 
 \begin{figure}[H]
-\includegraphics[width=\textwidth]{C:/Users/scheffel/Scheffel/Forschung/A_Projects/2021_CERED/CAD/06_Paper/ER-ED/figures/Design_ER-ED} \caption{ }\label{fig:DesignEREDappendix}
+\includegraphics[width=\textwidth]{figures/Design_ER-ED} \caption{ }\label{fig:DesignEREDappendix}
 \end{figure}
 
 \emph{Figure 2.} Block design of the paradigm.
