--- a/06_Paper/ER-ED/Manuscript_ERED_Stage1_rev.tex
+++ b/06_Paper/ER-ED/Manuscript_ERED_Stage1_rev.tex
@@ -156,9 +156,6 @@
   }
 {}{\PatchFailed}
 \keywords{emotion regulation, regulatory effort, effort discounting, registered report, specification curve analysis\newline\indent Word count: 6289}
-\usepackage{lineno}
-
-\linenumbers
 \usepackage{csquotes}
 \usepackage{booktabs}
 \usepackage{longtable}
@@ -328,7 +325,7 @@ This procedure will be repeated until all strategies have been compared.
 The SV of each strategy is calculated as the mean of this strategy's SV from all comparisons.
 In case a participant has a clear preference for one strategy, the SV of this strategy will be 1.
 But our paradigm can also account for the case that a person does not have a clear preference.
-Then no SV will be 1, but still, the SVs of all strategies can be interpreted as absolute values and in relation to the other strategy's SVs (see Figure \ref{fig:ResponsePatterns}).
+Then no SV will be 1, but still, the SVs of all strategies can be interpreted as absolute values and in relation to the other strategy's SVs (see Figure 1).
 In a separate study, we will test our adapted paradigm together with a \emph{n}-back task and explore whether this paradigm can describe individuals that do not prefer the easiest \emph{n}-back option (see Zerna et al.\textsuperscript{34}).
 
 INSERT FIGURE 1 HERE
@@ -408,7 +405,7 @@ For more detailed information on psychometric properties of the questionnaires, 
 
 The ER paradigm will consist of three parts that will be described in the following.
 
-\emph{Part one: ER task.} Part one will be a standard ER task in a block design (see Figure \ref{fig:DesignERED}), similar to paradigms previously used by our group\textsuperscript{22}.
+\emph{Part one: ER task.} Part one will be a standard ER task in a block design (see Figure 2), similar to paradigms previously used by our group\textsuperscript{22}.
 Participants will be told to actively view neutral and negative pictures (see \protect\hyperlink{ux5cux23stimuli}{2.3.3}) or to regulate all upcoming emotions by means of distraction, distancing, and expressive suppression, respectively.
 Every participant first will have the condition ``active viewing-neutral'' that serves as a baseline condition.
 During this block, 20 neutral pictures will be presented.
@@ -884,7 +881,14 @@ Subjective arousal and effort ratings are assessed after each block using a slid
 \hypertarget{DesignTable}{%
 \section{Design Table}\label{DesignTable}}
 
-INSERT DESIGN TABLE HERE
+\includepdf[pages={-}, landscape=true]{Supplement/Design_Table_T2.pdf}
+
+\newpage
+
+\hypertarget{SupplementaryMaterial}{%
+\section{Supplementary Material}\label{SupplementaryMaterial}}
+
+INCLUDE SUPPLEMENT HERE
 
 
 \end{document}
