--- a/06_Paper/ER-ED/ER_ED.bib
+++ b/06_Paper/ER-ED/ER_ED.bib
@@ -947,7 +947,7 @@ https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7177019/pdf/fpsyg-11-00470.pdf},
    year = {2020}
 }
 
-@article{Zerna2022,
+@article{ZernaScheffel2022,
    author = {Zerna, J. and Scheffel, C. and Kührt, C. and Strobel, A.},
    title = {When easy is not preferred: An effort discounting for estimating subjective values of taks},
    journal = {PsyArXiv},
