--- a/06_Paper/ER-ED/Manuscript_ERED_Stage1.tex
+++ b/06_Paper/ER-ED/Manuscript_ERED_Stage1.tex
@@ -155,7 +155,7 @@
     {}{\InnerPatchFailed}%
   }
 {}{\PatchFailed}
-\keywords{emotion regulation, regulatory effort, effort discounting, registered report, specification curve analysis\newline\indent Word count: 6289}
+\keywords{emotion regulation, regulatory effort, effort discounting, registered report, specification curve analysis\newline\indent Word count: 6303}
 \usepackage{lineno}
 
 \linenumbers
@@ -329,7 +329,7 @@ The SV of each strategy is calculated as the mean of this strategy's SV from all
 In case a participant has a clear preference for one strategy, the SV of this strategy will be 1.
 But our paradigm can also account for the case that a person does not have a clear preference.
 Then no SV will be 1, but still, the SVs of all strategies can be interpreted as absolute values and in relation to the other strategy's SVs (see Figure \ref{fig:ResponsePatterns}).
-In a separate study, we will test our adapted paradigm together with a \emph{n}-back task and explore whether this paradigm can describe individuals that do not prefer the easiest \emph{n}-back option (see Zerna et al.\textsuperscript{34}).
+In a separate study, we will test our adapted paradigm together with a \emph{n}-back task and explore whether this paradigm can describe individuals that do not prefer the easiest \emph{n}-back option (see Zerna, Scheffel et al.\textsuperscript{34}).
 
 \begin{figure}
 \includegraphics[width=\textwidth]{figures/Paradigm_Scheme_T2} \caption{Exemplary visualization of two response patterns. In the top half, the person has a clear preference for one of the three strategies. In the lower half, they have no clear preference and therefore show an inconsistent response pattern. This pattern can be represented by our paradigm.}\label{fig:ResponsePatterns}
@@ -532,6 +532,7 @@ SV \sim strategy\ + \text{effort rating} + \text{arousal rating} + \text{utility
 Level-1-predictors will be centered within cluster\textsuperscript{68}.
 Residuals of the final model will be inspected visually.
 Intraclass correlation coefficient (ICC), \(\rho\), will be reported for each model (null model, as well as full model).
+The presented MLM follows the conceptualization of Zerna, Scheffel, et al.\textsuperscript{34}
 
 To investigate whether individual SVs predict ER choice (H7a), a Chi-squared test with predicted choice (highest SV of each participant) and actual choice will be computed.
 Furthermore, an ordinal logistic regression with the dependent variable choice and independent variables SVs of each strategy will be computed.
@@ -700,7 +701,7 @@ The paradigm code, as well as the R Markdown file used to analyze the data and w
 \CSLLeftMargin{33. }%
 \CSLRightInline{Gross, J. J. \href{https://doi.org/10.1080/1047840x.2014.940781}{Emotion regulation: Current status and future prospects}. \emph{Psychological Inquiry} \textbf{26}, 1--26 (2015).}
 
-\leavevmode\vadjust pre{\hypertarget{ref-Zerna2022}{}}%
+\leavevmode\vadjust pre{\hypertarget{ref-ZernaScheffel2022}{}}%
 \CSLLeftMargin{34. }%
 \CSLRightInline{Zerna, J., Scheffel, C., Kührt, C. \& Strobel, A. When easy is not preferred: An effort discounting for estimating subjective values of taks. \emph{PsyArXiv} (2022) doi:\href{https://doi.org/10.31234/osf.io/ysh3q}{10.31234/osf.io/ysh3q}.}
 
