--- a/06_Paper/ER-ED/ERED_Stage2/method.Rmd
+++ b/06_Paper/ER-ED/ERED_Stage2/method.Rmd
@@ -88,40 +88,40 @@ For more detailed information on psychometric properties of the questionnaires, 
 
 The ER paradigm consisted of three parts that will be described in the following.
 
-*Part one: ER task.* <br> Part one will be a standard ER task in a block design (see Figure \@ref(fig:DesignERED)), similar to paradigms previously used by our group[@Scheffel2021].
-Participants will be told to actively view neutral and negative pictures (see [2.3.3](##stimuli)) or to regulate all upcoming emotions by means of distraction, distancing, and expressive suppression, respectively.
-Every participant first will have the condition "active viewing-neutral" that serves as a baseline condition.
-During this block, 20 neutral pictures will be presented.
-Participants will be asked to "actively view all pictures and permit all emotions that may arise." 
-In the second block, participants will actively view negative pictures.
-During the third, fourth, and fifth block, participants will see negative pictures and will be asked to regulate their emotions using distraction, distancing, and suppression.
-In order to achieve distraction, participants will be asked to think of a geometric object or an everyday activity, like brushing their teeth.
-During distancing, participants will be asked to "take the position of a non-involved observer, thinking about the picture in a neutral way." 
-Participants will be told not to re-interpret the situation or attaching a different meaning to the situation.
-During suppression, participants will be told to "suppress their emotional facial expression." 
+*Part one: ER task.* <br> Part one was a standard ER task in a block design (see Figure \@ref(fig:DesignERED)), similar to paradigms previously used by our group[@Scheffel2021].
+Participants were told to actively view neutral and negative pictures (see [2.3.3](##stimuli)) or to regulate all upcoming emotions by means of distraction, distancing, and expressive suppression, respectively.
+Every participant first had the condition "active viewing-neutral" that served as a baseline condition.
+During this block, 20 neutral pictures were presented.
+Participants were asked to "actively view all pictures and permit all emotions that may arise." 
+In the second block, participants actively viewed negative pictures.
+During the third, fourth, and fifth block, participants saw negative pictures and were asked to regulate their emotions using distraction, distancing, and suppression.
+In order to achieve distraction, participants were asked to think of a geometric object or an everyday activity, like brushing their teeth.
+During distancing, participants were asked to "take the position of a non-involved observer, thinking about the picture in a neutral way." 
+Participants were told not to re-interpret the situation or attaching a different meaning to the situation.
+During suppression, participants were told to "suppress their emotional facial expression." 
 They should imagine being observed by a third person that should not be able to tell by looking at the facial expression whether the person is looking at an emotional picture.
-Participants will be instructed not to suppress their thoughts or change their facial expression to the opposite[@Scheffel2021].
-All participants will receive written instruction and complete a training session.
-After the training session, participants will be asked about their applied ER strategies to avoid misapplication.
-The order of the three regulation blocks (distraction, distancing, and suppression) will be randomized between participants.
-Each of the blocks consists of 20 trials showing neutral (Block 1) and negative (Blocks 2, 3, 4, 5) pictures.
-Each trial begins with a fixation cross that lasts 3 to 5 seconds (random uniform distributed).
-It is followed by neutral or negative pictures for a total of 6 seconds.
-After each block, participants retrospectively will rate their subjective emotional arousal ("not at all aroused" to "very highly aroused"), their subjective effort ("not very exhausting" to "very exhausting"), and - after the ragulation blocks - the utility of the respective strategy ("not useful at all" to "very useful") on a continuous scale using a slider on screen.
+Participants were instructed not to suppress their thoughts or change their facial expression to the opposite[@Scheffel2021].
+All participants received written instruction and completed a training session.
+After the training session, participants were asked about their applied ER strategies to avoid misapplication.
+The order of the three regulation blocks (distraction, distancing, and suppression) were randomized between participants.
+Each of the blocks consisted of 20 trials showing neutral (Block 1) and negative (Blocks 2, 3, 4, 5) pictures.
+Each trial began with a fixation cross that lasted 3 to 5 seconds (random uniform distributed).
+It was followed by neutral or negative pictures for a total of 6 seconds.
+After each block, participants retrospectively rated their subjective emotional arousal ("not at all aroused" to "very highly aroused"), their subjective effort ("not very exhausting" to "very exhausting"), and - after the regulation blocks - the utility of the respective strategy ("not useful at all" to "very useful") on a continuous scale using a slider on screen.
 
-*Part two: ER effort discounting.* <br> In the second part, ER effort discounting will take place.
+*Part two: ER effort discounting.* <br> In the second part, ER effort discounting took place.
 The procedure of the discounting will follow the COG-ED paradigm by Westbrook et al.[-@Westbrook2013] with a major change.
-We will use the following adaption that allows the computation of SVs for different strategies without presuming that all individuals would inherently evaluate the same strategy as the easiest one: For each possible pairing (distraction vs. distancing, distraction vs. suppression, and distancing vs. suppression), each of the two strategies will be presented with a monetary reward.
-Because there is no strategy that is objectively more difficult, we will add initial comparisons asking the participants to choose between "1 € for strategy A or 1 € for strategy B".
-They decide by clicking the on-screen button of the respective option.
-Each of the three strategy pairs will be presented three times in total, in a randomized order and randomly assigned which strategy appears on the left or right side of the screen.
-For each pair, the strategy that was chosen at least two out of three times will be assigned the flexible starting value of 1 €, the other strategy will be assigned the fixed value of 2 €.
-After this, comparisons between strategies will follow the original COG-ED paradigm[@Westbrook2013].
-Each pairing is presented six consecutive times, and with each decision the reward of the strategy with the starting value of 1 € is either lowered (if this strategy was chosen) or raised (if the strategy with the fixed 2 € reward was chosen).
-The adjustment starts at 0.50 € and each is half the adjustment of the previous step, rounded to two digits after the decimal point.
-If a participant always chooses the strategy with the fixed 2 € reward, the other strategy's last value on display will be 1.97 €, if they always choose the lower strategy, its last value will be 0.03 €.
-The sixth adjustment of 0.02 € will be done during data analysis, based on the participants' decision in the last display of the pairing.
-Participants will be instructed to decide as realistically as possible by imagining that the monetary reward is actually available for choice.
+We used the following adaption that allowed the computation of SVs for different strategies without presuming that all individuals would inherently evaluate the same strategy as the easiest one: For each possible pairing (distraction vs. distancing, distraction vs. suppression, and distancing vs. suppression), each of the two strategies were presented with a monetary reward.
+Because there is no strategy that is objectively more difficult, we added initial comparisons asking the participants to choose between "1 € for strategy A or 1 € for strategy B".
+They decided by clicking the on-screen button of the respective option.
+Each of the three strategy pairs were presented three times in total, in a randomized order and randomly assigned which strategy appeared on the left or right side of the screen.
+For each pair, the strategy that was chosen at least two out of three times was assigned the flexible starting value of 1 €, the other strategy was assigned the fixed value of 2 €.
+After this, comparisons between strategies followed the original COG-ED paradigm[@Westbrook2013].
+Each pairing was presented six consecutive times, and with each decision the reward of the strategy with the starting value of 1 € was either lowered (if this strategy was chosen) or raised (if the strategy with the fixed 2 € reward was chosen).
+The adjustment started at 0.50 € and each was half the adjustment of the previous step, rounded to two digits after the decimal point.
+If a participant always chose the strategy with the fixed 2 € reward, the other strategy's last value on display was 1.97 €, if they always choose the lower strategy, its last value was 0.03 €.
+The sixth adjustment of 0.02 € was done during data analysis, based on the participants' decision in the last display of the pairing.
+Participants were instructed to decide as realistically as possible by imagining that the monetary reward was actually available for choice.
 
 *Part three: ER choice.* <br> After the discounting part, participants will choose which one of the three ER strategies (distraction, distancing or suppression) they want to re-apply.
 Importantly, there will be no further instruction on what basis they should make their decision.
